--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/2.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -85,7 +85,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/3.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -114,7 +114,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/4.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -142,7 +142,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/5.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -170,7 +170,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/6.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -233,7 +233,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/2.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -261,7 +261,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/3.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -290,7 +290,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/4.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -318,7 +318,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/5.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -346,7 +346,7 @@
                                                     <span>120 ₽</span>
                                                 </div>
                                                 <div class="intro__img">
-                                                    <img src="assets/images/1.png" alt="">
+                                                    <img src="assets/images/6.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="intro__col">
@@ -380,6 +380,219 @@
                     </div>
                 </div>
 
+
+                <div class="swiper mySwiperMobail">
+                    <h1 class="intro-title">Какой-то Заголовок Для меню</h1>
+                    <div class="swiper-wrapper">
+
+                        <div class="swiper-slide">
+                            <div class="container">
+                                <div class="intro-wrap">
+                                    <div class="intro">
+                                        <div class="intro__wrap">
+                                            <div class="intro__row">
+
+                                                <div class="intro__img">
+                                                    <img src="assets/images/1.png" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="intro__col">
+                                                <div class="intro__title">Первый вариант</div>
+                                                <div class="intro__text">Яйца - 3 шт.
+                                                    Молоко - 250 мл (1 стакан)
+                                                    Вода - 300-400 мл (1-2 стакана)
+                                                    Сахар - 2 ст. ложки
+                                                    Мука - 240 г (1,5 стакана)
+                                                    Масло растительное - 1-2 ст. ложки
+                                                </div>
+                                                <div class="intro__gramm">
+                                                    <span class="intro__subtext">Общий объем</span>
+                                                    <!-- <span class="intro__leter intro__subtext">.................</span> -->
+                                                    <span class="intro__subtext color">220гр</span>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>120 ₽</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <div class="container">
+                                <div class="intro-wrap">
+                                    <div class="intro">
+                                        <div class="intro__wrap">
+                                            <div class="intro__row">
+
+                                                <div class="intro__img">
+                                                    <img src="assets/images/2.png" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="intro__col">
+                                                <div class="intro__title">Первый вариант</div>
+                                                <div class="intro__text">Яйца - 3 шт.
+                                                    Молоко - 250 мл (1 стакан)
+                                                    Вода - 300-400 мл (1-2 стакана)
+                                                    Сахар - 2 ст. ложки
+                                                    Мука - 240 г (1,5 стакана)
+                                                    Масло растительное - 1-2 ст. ложки
+                                                </div>
+                                                <div class="intro__gramm">
+                                                    <span class="intro__subtext">Общий объем</span>
+                                                    <!-- <span class="intro__leter intro__subtext">.................</span> -->
+                                                    <span class="intro__subtext color">220гр</span>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>120 ₽</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="container">
+                                <div class="intro-wrap">
+                                    <div class="intro">
+                                        <div class="intro__wrap">
+                                            <div class="intro__row">
+
+                                                <div class="intro__img">
+                                                    <img src="assets/images/3.png" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="intro__col">
+                                                <div class="intro__title">Первый вариант</div>
+                                                <div class="intro__text">Яйца - 3 шт.
+                                                    Молоко - 250 мл (1 стакан)
+                                                    Вода - 300-400 мл (1-2 стакана)
+                                                    Сахар - 2 ст. ложки
+                                                    Мука - 240 г (1,5 стакана)
+                                                    Масло растительное - 1-2 ст. ложки
+                                                </div>
+                                                <div class="intro__gramm">
+                                                    <span class="intro__subtext">Общий объем</span>
+                                                    <!-- <span class="intro__leter intro__subtext">.................</span> -->
+                                                    <span class="intro__subtext color">220гр</span>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>120 ₽</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="container">
+                                <div class="intro-wrap">
+                                    <div class="intro">
+                                        <div class="intro__wrap">
+                                            <div class="intro__row">
+
+                                                <div class="intro__img">
+                                                    <img src="assets/images/4.png" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="intro__col">
+                                                <div class="intro__title">Первый вариант</div>
+                                                <div class="intro__text">Яйца - 3 шт.
+                                                    Молоко - 250 мл (1 стакан)
+                                                    Вода - 300-400 мл (1-2 стакана)
+                                                    Сахар - 2 ст. ложки
+                                                    Мука - 240 г (1,5 стакана)
+                                                    Масло растительное - 1-2 ст. ложки
+                                                </div>
+                                                <div class="intro__gramm">
+                                                    <span class="intro__subtext">Общий объем</span>
+                                                    <!-- <span class="intro__leter intro__subtext">.................</span> -->
+                                                    <span class="intro__subtext color">220гр</span>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>120 ₽</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="container">
+                                <div class="intro-wrap">
+                                    <div class="intro">
+                                        <div class="intro__wrap">
+                                            <div class="intro__row">
+
+                                                <div class="intro__img">
+                                                    <img src="assets/images/5.png" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="intro__col">
+                                                <div class="intro__title">Первый вариант</div>
+                                                <div class="intro__text">Яйца - 3 шт.
+                                                    Молоко - 250 мл (1 стакан)
+                                                    Вода - 300-400 мл (1-2 стакана)
+                                                    Сахар - 2 ст. ложки
+                                                    Мука - 240 г (1,5 стакана)
+                                                    Масло растительное - 1-2 ст. ложки
+                                                </div>
+                                                <div class="intro__gramm">
+                                                    <span class="intro__subtext">Общий объем</span>
+                                                    <!-- <span class="intro__leter intro__subtext">.................</span> -->
+                                                    <span class="intro__subtext color">220гр</span>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>120 ₽</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="container">
+                                <div class="intro-wrap">
+                                    <div class="intro">
+                                        <div class="intro__wrap">
+                                            <div class="intro__row">
+
+                                                <div class="intro__img">
+                                                    <img src="assets/images/6.png" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="intro__col">
+                                                <div class="intro__title">Первый вариант</div>
+                                                <div class="intro__text">Яйца - 3 шт.
+                                                    Молоко - 250 мл (1 стакан)
+                                                    Вода - 300-400 мл (1-2 стакана)
+                                                    Сахар - 2 ст. ложки
+                                                    Мука - 240 г (1,5 стакана)
+                                                    Масло растительное - 1-2 ст. ложки
+                                                </div>
+                                                <div class="intro__gramm">
+                                                    <span class="intro__subtext">Общий объем</span>
+                                                    <!-- <span class="intro__leter intro__subtext">.................</span> -->
+                                                    <span class="intro__subtext color">220гр</span>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>120 ₽</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </section>
         </main>
 
