--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/1.png" alt="">
+                                                <img src="assets/images/1.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -56,7 +56,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/2.png" alt="">
+                                                <img src="assets/images/2.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -84,7 +84,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/3.png" alt="">
+                                                <img src="assets/images/3.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -113,7 +113,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/4.png" alt="">
+                                                <img src="assets/images/4.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -141,7 +141,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/5.png" alt="">
+                                                <img src="assets/images/5.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -169,7 +169,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/6.png" alt="">
+                                                <img src="assets/images/6.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -204,7 +204,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/1.png" alt="">
+                                                <img src="assets/images/1.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -232,7 +232,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/2.png" alt="">
+                                                <img src="assets/images/2.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -260,7 +260,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/3.png" alt="">
+                                                <img src="assets/images/3.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -289,7 +289,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/4.png" alt="">
+                                                <img src="assets/images/4.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -317,7 +317,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/5.png" alt="">
+                                                <img src="assets/images/5.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -345,7 +345,7 @@
                                                 <span>120 ₽</span>
                                             </div>
                                             <div class="intro__img">
-                                                <img src="../assets/images/6.png" alt="">
+                                                <img src="assets/images/6.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -392,7 +392,7 @@
                                         <div class="intro__row">
 
                                             <div class="intro__img">
-                                                <img src="../assets/images/1.png" alt="">
+                                                <img src="assets/images/1.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -427,7 +427,7 @@
                                         <div class="intro__row">
 
                                             <div class="intro__img">
-                                                <img src="../assets/images/2.png" alt="">
+                                                <img src="assets/images/2.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -461,7 +461,7 @@
                                         <div class="intro__row">
 
                                             <div class="intro__img">
-                                                <img src="../assets/images/3.png" alt="">
+                                                <img src="assets/images/3.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -495,7 +495,7 @@
                                         <div class="intro__row">
 
                                             <div class="intro__img">
-                                                <img src="../assets/images/4.png" alt="">
+                                                <img src="assets/images/4.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -529,7 +529,7 @@
                                         <div class="intro__row">
 
                                             <div class="intro__img">
-                                                <img src="../assets/images/5.png" alt="">
+                                                <img src="assets/images/5.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
@@ -563,7 +563,7 @@
                                         <div class="intro__row">
 
                                             <div class="intro__img">
-                                                <img src="../assets/images/6.png" alt="">
+                                                <img src="assets/images/6.png" alt="">
                                             </div>
                                         </div>
                                         <div class="intro__col">
