--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>220 ₽</span>
+                                                <span>220 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -50,7 +50,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>250 ₽</span>
+                                                <span>250 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -65,7 +65,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>280 ₽</span>
+                                                <span>280 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -80,7 +80,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>280 ₽</span>
+                                                <span>280 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -95,7 +95,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>280 ₽</span>
+                                                <span>280 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -110,7 +110,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>280 ₽</span>
+                                                <span>280 руб.</span>
                                             </div>
                                         </div>
                                     </div>
@@ -152,7 +152,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>60 ₽</span>
+                                                    <span>60 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -165,7 +165,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>70 ₽</span>
+                                                    <span>70 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -179,7 +179,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>60 ₽</span>
+                                                    <span>60 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -192,7 +192,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>80 ₽</span>
+                                                    <span>80 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -205,7 +205,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>100 ₽</span>
+                                                    <span>100 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -218,7 +218,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>100 ₽</span>
+                                                    <span>100 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -234,7 +234,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>130 ₽</span>
+                                                    <span>130 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -250,7 +250,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>150 ₽</span>
+                                                    <span>150 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -266,7 +266,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>30 ₽</span>
+                                                    <span>30 руб.</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -328,7 +328,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>60 ₽</span>
+                                                <span>60 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -341,7 +341,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>70 ₽</span>
+                                                <span>70 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -355,7 +355,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>60 ₽</span>
+                                                <span>60 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -368,7 +368,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>80 ₽</span>
+                                                <span>80 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -381,7 +381,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>100 ₽</span>
+                                                <span>100 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -394,7 +394,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>100 ₽</span>
+                                                <span>100 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -410,7 +410,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>130 ₽</span>
+                                                <span>130 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -426,7 +426,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>150 ₽</span>
+                                                <span>150 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
@@ -442,7 +442,7 @@
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>30 ₽</span>
+                                                <span>30 руб.</span>
                                             </div>
                                         </div>
                                     </div>
