--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Солнечная булочка,Котлета куриная
                                                             , Огурец (соленый), Помидор (свежий), Капуста
-                                                            пекинская, Горчица</span>
+                                                            пекинская, Горчица, Соус карри</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -41,7 +41,7 @@
                                         </div>
                                         <div class="intro__row">
                                             <div class="intro__col">
-                                                <div class="intro__title">Beff- Бургер</div>
+                                                <div class="intro__title">Beef- Бургер</div>
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Котлета Говяжья, Булочка Бриошь, Бургер Соус,
@@ -55,12 +55,12 @@
                                         </div>
                                         <div class="intro__row">
                                             <div class="intro__col">
-                                                <div class="intro__title">BBQ(с Беконм) Бургер</div>
+                                                <div class="intro__title">BBQ(с Беконом) Бургер</div>
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Булочка Бриошь, Котлета Говяжья, Бекон, Лук
                                                             фри, Капуста, Огурец, Помидор,
-                                                            Кетчуп</span>
+                                                            Кетчуп, Соус барбекю</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -73,7 +73,7 @@
                                                 <div class="intro__title">Cheese - Бургер </div>
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <span class="intro__text">Булочк, Котлета Говяжья, Соус чеддер, сыр,
+                                                        <span class="intro__text">Булочка, Котлета Говяжья, Соус чеддер, сыр,
                                                             Капуста, Огурец, Помидор</span>
                                                     </div>
                                                 </div>
@@ -84,11 +84,12 @@
                                         </div>
                                         <div class="intro__row">
                                             <div class="intro__col">
-                                                <div class="intro__title">Egg - Бургер Говяжий с Беконом</div>
+                                                <div class="intro__title">Egg - Бургер </div>
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Булочка Бриошь, Котлета Говяжья, бургер соус,
-                                                            Капуста, Огурец, Помидор,
+                                                            Лук фри,
+                                                            Капуста, Помидор,
                                                             Кетчуп</span>
                                                     </div>
                                                 </div>
@@ -103,12 +104,12 @@
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">
-                                                            Кетчуп, Сырный, Горчичный</span>
+                                                            Кетчуп, Сырный, Кисло - сладкий,Баркекью, Терияки</span>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>45 руб.</span>
+                                                <span>30 руб.</span>
                                             </div>
                                         </div>
                                     </div>
@@ -254,7 +255,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>35 руб.</span>
+                                                    <span>50 руб.</span>
                                                 </div>
                                             </div>
 
@@ -263,7 +264,7 @@
                                 </div>
                             </div>
                             <div class="intro-footer">
-                                <h1 class="intro-title">Безалкогольный напитки</h1>
+                                <h1 class="intro-title">Безалкогольные напитки</h1>
                                 <div class="intro-footer__wrap">
                                     <div class="intro-footer__col">
                                         <div class="intro-footer__text">Вода асс.</div>
@@ -289,7 +290,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
+                    <!-- <div class="swiper-slide">
                         <div class="container">
                             <div class="intro-footer intro-footer_two">
                                 <h1 class="intro-title">Алкогольные коктейли</h1>
@@ -398,8 +399,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <!-- <div class="swiper-slide">Slide 2</div>
+                        </div> -->
+                    <!-- <div class="swiper-slide">Slide 2</div>
                     <div class="swiper-slide">Slide 3</div>
                     <div class="swiper-slide">Slide 4</div>
                     <div class="swiper-slide">Slide 5</div>
@@ -407,8 +408,8 @@
                     <div class="swiper-slide">Slide 7</div>
                     <div class="swiper-slide">Slide 8</div>
                     <div class="swiper-slide">Slide 9</div> -->
-                    </div>
                 </div>
+            </div>
 
         </section>
     </main>
