--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Солнечная булочка,Котлета куриная
-                                                            , Огурец (соленый), Помидор (свежий), Капуста
-                                                            пекинская, Горчица, Соус карри</span>
+                                                            , Огурец (соленый), Помидор (свежий), Айсберг, Горчица, Соус карри</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -45,7 +44,7 @@
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Котлета Говяжья, Булочка Бриошь, Бургер Соус,
-                                                            , Помидор, Лук фри, Капуста,Кетчуп</span>
+                                                            , Помидор, Лук фри, Айсберг,Кетчуп</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -59,7 +58,7 @@
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Булочка Бриошь, Котлета Говяжья, Бекон, Лук
-                                                            фри, Капуста, Огурец, Помидор,
+                                                            фри, Айсберг, Огурец, Помидор,
                                                             Кетчуп, Соус барбекю</span>
                                                     </div>
                                                 </div>
@@ -73,8 +72,8 @@
                                                 <div class="intro__title">Cheese - Бургер </div>
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <span class="intro__text">Булочка, Котлета Говяжья, Соус чеддер, сыр,
-                                                            Капуста, Огурец, Помидор</span>
+                                                        <span class="intro__text">Солнечная булочка , Котлета Говяжья, соус горчичный,кетчуп, сыр,сырная палочка,
+                                                            Айсберг, Огурец</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -87,9 +86,10 @@
                                                 <div class="intro__title">Egg - Бургер </div>
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <span class="intro__text">Булочка Бриошь, Котлета Говяжья, бургер соус,
+                                                        <span class="intro__text">Булочка Бриошь, Котлета Говяжья, бургер соус,яйцо,
                                                             Лук фри,
-                                                            Капуста, Помидор,
+                                                            Айсберг
+                                                            , Помидор,
                                                             Кетчуп</span>
                                                     </div>
                                                 </div>
