--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                                     </div>
                                     <div class="intro-header__col">
                                         <div class="intro-header__text">Лук Фри</div>
-                                        <div class="intro-header__price">120 руб.</div>
+                                        <div class="intro-header__price">100 руб.</div>
                                     </div>
                                     <div class="intro-header__col">
                                         <div class="intro-header__text">Сырные палочки</div>
-                                        <div class="intro-header__price">200 руб.</div>
+                                        <div class="intro-header__price">210 руб.</div>
                                     </div>
                                 </div>
 
@@ -247,7 +247,7 @@
                                                 <div class="intro__col">
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
-                                                            <div class="intro__title">Чай в асс. </div>
+                                                            <div class="intro__title">Чай </div>
                                                         </div>
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">апельсин, лимон</span>
