--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                         <div class="intro-header__price">100 руб.</div>
                                     </div>
                                     <div class="intro-header__col">
-                                        <div class="intro-header__text">Сырные палочки</div>
+                                        <div class="intro-header__text">Сырные шакири</div>
                                         <div class="intro-header__price">210 руб.</div>
                                     </div>
                                 </div>
@@ -280,6 +280,11 @@
                                         <div class="intro-footer__text">Кола Ж/Б</div>
                                         <span class="intro-footer__subtext">250мл </span>
                                         <div class="intro-footer__price"><span>90 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Кола Стекло</div>
+                                        <span class="intro-footer__subtext">200мл </span>
+                                        <div class="intro-footer__price"><span>110 руб.</span></div>
                                     </div>
                                     <div class="intro-footer__col">
                                         <div class="intro-footer__text">Сок асс</div>
