--- a/index.html
+++ b/index.html
@@ -133,8 +133,16 @@
                                             <div class="intro-header__price">100 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
-                                            <div class="intro-header__text">Сырные шарики</div>
-                                            <div class="intro-header__price">210 руб.</div>
+                                            <div class="intro-header__text">Сырные шарики (острые/не острые)</div>
+                                            <div class="intro-header__price">180 руб.</div>
+                                        </div>
+                                        <div class="intro-header__col">
+                                            <div class="intro-header__text">Крылышки KFC (острые)</div>
+                                            <div class="intro-header__price">160 руб.</div>
+                                        </div>
+                                        <div class="intro-header__col">
+                                            <div class="intro-header__text">Наггетсы</div>
+                                            <div class="intro-header__price">130 руб.</div>
                                         </div>
                                     </div>
 
