--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">Котлета Говяжья, Булочка Бриошь,
-                                                                Бургер Соус,
-                                                                , Помидор, Лук фри, Айсберг,Кетчуп</span>
+                                                                Бургер Соус, Кетчуп, Брусничный Соус
+                                                                , Помидор, Лук фри, Огурец(соленый) Айсберг</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -77,8 +77,8 @@
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">Солнечная булочка , Котлета
-                                                                Говяжья, соус горчичный,кетчуп, сыр,сырная палочка,
-                                                                Айсберг, Огурец</span>
+                                                                Говяжья, соус горчичный,кетчуп, Сыр,Сырный шарик,
+                                                                Айсберг, Огурец, Помидор</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -95,7 +95,7 @@
                                                                 бургер соус,яйцо,
                                                                 Лук фри,
                                                                 Айсберг
-                                                                , Помидор,
+                                                                , Помидор, Огурец(соленый),
                                                                 Кетчуп</span>
                                                         </div>
                                                     </div>
