--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">
-                                                                Кетчуп, Сырный, Кисло - сладкий,Баркекью, Терияки, Брусничный, Чесночный</span>
+                                                                Кетчуп, Сырный, Кисло - сладкий,Баркекью, Терияки,
+                                                                Брусничный, Чесночный</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -289,7 +290,7 @@
                                         </div>
                                         <div class="intro-footer__col">
                                             <div class="intro-footer__text">Кола</div>
-                                            <span class="intro-footer__subtext">0.5л</span>
+                                            <span class="intro-footer__subtext">1л</span>
                                             <div class="intro-footer__price"><span>110 руб.</span></div>
                                         </div>
                                         <div class="intro-footer__col">
