--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                             <div class="intro-footer__price"><span>140 руб.</span></div>
                                         </div>
                                         <div class="intro-footer__col">
-                                            <div class="intro-footer__text">Кола Ж/Б</div>
+                                            <div class="intro-footer__text">Кола/Фанта Ж/Б</div>
                                             <span class="intro-footer__subtext">250мл </span>
                                             <div class="intro-footer__price"><span>90 руб.</span></div>
                                         </div>
