--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">Солнечная булочка,Котлета куриная
                                                                 , Огурец (соленый), Помидор (свежий), Айсберг, Горчица,
-                                                                Соус карри</span>
+                                                                Соус Сырный</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -77,7 +77,7 @@
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">Солнечная булочка , Котлета
-                                                                Говяжья, соус горчичный,кетчуп, Сыр,Сырный шарик,
+                                                                Говяжья, Соус горчичный,Кетчуп, Сыр,Сырный шарик,
                                                                 Айсберг, Огурец, Помидор</span>
                                                         </div>
                                                     </div>
