--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">Солнечная булочка,Котлета куриная
                                                                 , Огурец (соленый), Помидор (свежий), Айсберг, Горчица,
-                                                                Соус Сырный</span>
+                                                                Соус Сырный,Соус Карри</span>
                                                         </div>
                                                     </div>
                                                 </div>
