--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                                             <span class="intro__text">Булочка Бриошь, Котлета Говяжья,
                                                                 Бекон, Лук
                                                                 фри, Айсберг, Огурец, Помидор,
-                                                                Кетчуп, Соус барбекю</span>
+                                                                Кетчуп, Соус Барбекью</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -110,7 +110,7 @@
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">
-                                                                Кетчуп, Сырный, Кисло - сладкий,Барбекю, Терияки,
+                                                                Кетчуп, Сырный, Кисло - сладкий,Барбекью, Терияки,
                                                                 Брусничный, Чесночный</span>
                                                         </div>
                                                     </div>
@@ -154,7 +154,7 @@
                                             <h1 class="intro-title">Десерт</h1>
                                             <div class="intro-header__col">
                                                 <div class="intro-header__text">Пончик</div>
-                                                <div class="intro-header__price">-</div>
+                                                <div class="intro-header__price"></div>
                                             </div>
 
                                         </div>
