--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                             <h1 class="intro-title">Десерт</h1>
                                             <div class="intro-header__col">
                                                 <div class="intro-header__text">Пончик</div>
-                                                <div class="intro-header__price"></div>
+                                                <div class="intro-header__price">90 руб.</div>
                                             </div>
 
                                         </div>
