--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
                                                         <div class="intro__col">
                                                             <div class="intro__table">
                                                                 <div class="intro__table-row">
-                                                                    <div class="intro__title">Брускета с беконом и
-                                                                        вялеными томатами</div>
+                                                                    <div class="intro__title">Брускета с беконом</div>
                                                                 </div>
                                                             </div>
                                                         </div>
