--- a/index.html
+++ b/index.html
@@ -458,22 +458,22 @@
 
                                         </div>
                                         <div class="intro-footer intro-footer--beer">
-                                            <h1 class="intro-title">Холодные напитки  <div class="intro__decor">
+                                            <h1 class="intro-title">Пиво<div class="intro__decor">
                                                 NEW
                                             </div></h1>
                                             <div class="intro-footer__wrap">
                                                 <div class="intro-footer__col">
-                                                    <div class="intro-footer__text">Пиво Светлое</div>
+                                                    <div class="intro-footer__text"> Светлое</div>
                                                     <span class="intro-footer__subtext">0,5л</span>
                                                     <div class="intro-footer__price"><span>110 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
-                                                    <div class="intro-footer__text">Пиво Нефильтрованное</div>
+                                                    <div class="intro-footer__text"> Нефильтрованное</div>
                                                     <span class="intro-footer__subtext">0,5л</span>
                                                     <div class="intro-footer__price"><span>110 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
-                                                    <div class="intro-footer__text">Corona Extra </div>
+                                                    <div class="intro-footer__text">Corona Extra бут. </div>
                                                     <span class="intro-footer__subtext">0,33мл</span>
                                                     <div class="intro-footer__price"><span>210 руб.</span></div>
                                                 </div>
