--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                                 <div class="intro-header__price">430 руб.</div>
                                             </div>
                                             <div class="intro-header__col intro-header__col--set">
-                                                <div class="intro-header__text">Сет Фри </div>
+                                                <div class="intro-header__text">Микс Фри </div>
                                                 <span class="intro__text">Картофель фри, Луковые кольца, Сырные
                                                     шарики</span>
                                                 <div class="intro-header__price">395 руб.</div>
