--- a/index.html
+++ b/index.html
@@ -403,14 +403,19 @@
                                                     <div class="intro-footer__price"><span>65 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
-                                                    <div class="intro-footer__text">Кола</div>
+                                                    <div class="intro-footer__text">Coca-cola</div>
                                                     <span class="intro-footer__subtext">0,5л/1л</span>
                                                     <div class="intro-footer__price"><span>120/150 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
-                                                    <div class="intro-footer__text">Кола/Фанта Ж/Б</div>
+                                                    <div class="intro-footer__text">Coca-cola/Fanta Ж/Б</div>
                                                     <span class="intro-footer__subtext">250мл </span>
                                                     <div class="intro-footer__price"><span>90 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Кола стекло</div>
+                                                    <span class="intro-footer__subtext">300мл </span>
+                                                    <div class="intro-footer__price"><span>80 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Энергетик Burn</div>
