--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                                     </div>
                                                 </h1>
                                                 <div class="intro__wrapper">
-                                                    <div class="intro__row">
+                                                    <!-- <div class="intro__row">
                                                         <div class="intro__col">
                                                             <div class="intro__table">
                                                                 <div class="intro__table-row">
@@ -231,7 +231,7 @@
                                                         <div class="intro__price">
                                                             <span>180 руб.</span>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                     <div class="intro__row">
                                                         <div class="intro__col">
                                                             <div class="intro__table">
