--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                                             </div>
                                             <div class="intro__row">
                                                 <div class="intro__col">
-                                                    <!-- <div class="intro__decor">
+                                                    <div class="intro__decor">
                                                         NEW
-                                                    </div> -->
+                                                    </div>
                                                     <div class="intro__title">Double Сheeseburger</div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
