--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="intro-footer-wrap">
+                                    <div class="intro-footer-wrap intro-footer-wrap--watter">
                                         <div class="intro-footer">
                                             <h1 class="intro-title">Безалкогольные напитки</h1>
                                             <div class="intro-footer__wrap">
